--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WoS Map-Editor</title>
   </head>
   <body>
     <div id="app"></div>
+      <script>window.DRAFT_ID = undefined;</script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
